--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+:root{
+   --primary1: rgb(227, 233, 236);
+  --background1: #0F1624;
+   --accent1: hsl(34.9,98.6%,72.9%);
+   --button: hsl(205.1,100%,36.1%);
+   --background2: hsl(232.7,27.3%,23.7%);
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  --sm:  640px;
+  --md:  768px;
+  --lg:  1024px;
+  --xl:  1280px;
+   
+   --biggest-font-size: 2.25rem;
+   --h1-font-size: 1.5rem;
+   --h2-font-size: 1.25rem;
+   --h3-font-size: 1rem;
+   --normal-font-size: .938rem;
+   --small-font-size: .813rem;
+   --smaller-font-size: .75rem;
+  
+  }
+
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  html {
+    font-size: 62.5%;
+    scroll-behavior: smooth;
+
+  }
+  body {
+    font-family: 'Lora', serif;    
+   background-color: var(--background1);
+   color: var(--primary1);
+    cursor: default; 
+  }
+
+  h1,h2,h3,h4,h5,h6,button {
+    
+  }
+
+  a  {
+    text-decoration: none;
+    
+  }
+  li{
+    list-style: none;
+  }
